fix(newsletter): reduce right sidebar width to 17rem (#3537)
it was 21 rem before and it was too big!

--- a/app/styles/components/modules/template-builder.scss
+++ b/app/styles/components/modules/template-builder.scss
@@ -263,13 +263,13 @@
   }
 
   .gjs-pn-views, .gjs-pn-views-container {
-    width: 21rem;
+    width: 17rem;
     border-left: 1px solid #e0e8ed;
   }
 
   .gjs-cv-canvas {
     height: 100%;
-    width: calc(100% - 21rem);
+    width: calc(100% - 17rem);
     top: 0;
   }
 
